--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,17 @@ anyhow = "1.0.75"
 parity-scale-codec = { version = "3.6.5", features = ["derive"] }
 proc-macro2 = "1.0.69"
 quote = "1.0.33"
-scale-info = "2.10.0"
+scale-bits = "0.4.0"
+
+scale-info = { version = "2.10.0", features = [
+    "derive",
+    "bitvec",
+    "decode",
+    "docs",
+] }
 syn = { version = "2.0.38", features = ["full", "extra-traits"] }
 thiserror = "1.0.50"
+
+[dev-dependencies]
+scale-decode = "0.9.0"
+scale-encode = "0.5.0"
