--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,10 +17,14 @@ scale-info = { version = "2.10.0", features = [
     "bitvec",
     "decode",
     "docs",
+    "serde",
 ] }
 syn = { version = "2.0.38", features = ["full", "extra-traits"] }
 thiserror = "1.0.50"
 
 [dev-dependencies]
+prettyplease = "0.2.15"
 scale-decode = "0.9.0"
 scale-encode = "0.5.0"
+serde = "1.0.192"
+serde_json = "1.0.108"
