--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,3 +31,5 @@ scale-decode = "0.9.0"
 scale-encode = "0.5.0"
 serde = "1.0.192"
 serde_json = "1.0.108"
+bitvec = { version = "1", default-features = false }
+pretty_assertions = "1.4.0"
