make scale description and scale example extensions of scale-typegen

--- a/scale-typegen/Cargo.toml
+++ b/scale-typegen/Cargo.toml
@@ -18,6 +18,9 @@ smallvec = { workspace = true }
 syn = { workspace = true }
 thiserror = { workspace = true }
 
+scale-description = { workspace = true }
+scale-example = { workspace = true }
+
 [dev-dependencies]
 prettyplease = { workspace = true }
 scale-decode = { workspace = true }
