--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,13 @@ homepage = "https://www.parity.io/"
 
 
 [workspace.dependencies]
+
+# crates
+scale-description = { version = "0.0.1", path = "scale-description" }
+scale-example = { version = "0.0.1", path = "scale-example" }
+scale-typegen = { version = "0.0.1", path = "scale-typegen" }
+
+# external dependencies
 parity-scale-codec = { version = "3.6.5", features = ["derive"] }
 proc-macro2 = "1.0.69"
 quote = "1.0.33"
