--- a/scale-example/Cargo.toml
+++ b/scale-example/Cargo.toml
@@ -6,3 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+scale-value = "0.13.0"
+proc-macro2 = "1.0.69"
+rand_chacha = "0.3.1"
+rand = "0.8.5"
+
+
+anyhow = { workspace = true }
+scale-info = { workspace = true }
