--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["scale-typegen", "scale-description", "scale-example"]
+members = ["scale-typegen", "scale-description"]
 resolver = "2"
 
 
@@ -17,7 +17,6 @@ homepage = "https://www.parity.io/"
 
 # crates
 scale-description = { version = "0.0.1", path = "scale-description" }
-scale-example = { version = "0.0.1", path = "scale-example" }
 
 # external dependencies
 parity-scale-codec = { version = "3.6.5", features = ["derive"] }
