broken commit, continue next week

--- a/scale-description/Cargo.toml
+++ b/scale-description/Cargo.toml
@@ -28,6 +28,8 @@ proc-macro2 = { version = "1.0.69", optional = true }
 rand_chacha = { version = "0.3.1", optional = true }
 rand = { version = "0.8.5", optional = true }
 
+scale-typegen = { workspace = true }
+
 
 [dev-dependencies]
 indoc = "2"
