--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,4 +34,7 @@ frame-metadata = { version = "16.0.0", default-features = false, features = ["cu
 bitvec = { version = "1", default-features = false }
 pretty_assertions = "1.4.0"
 anyhow = "1.0.75"
-# crates
+peekmore = "1.3.0"
+scale-value = { version = "0.13.0" }
+rand_chacha = { version = "0.3.1" }
+rand = { version = "0.8.5" }
