--- a/description/Cargo.toml
+++ b/description/Cargo.toml
@@ -14,17 +14,17 @@ type-example = ["dep:scale-value", "dep:proc-macro2", "dep:rand_chacha", "dep:ra
 
 [dependencies]
 anyhow = { workspace = true }
-peekmore = "1.3.0"
+peekmore = { workspace = true }
 smallvec = { workspace = true }
 scale-info = { workspace = true }
-
-scale-value = { version = "0.13.0", optional = true }
-proc-macro2 = { version = "1.0.69", optional = true }
-rand_chacha = { version = "0.3.1", optional = true }
-rand = { version = "0.8.5", optional = true }
-
 scale-typegen = { workspace = true }
 quote = { workspace = true }
+
+#dependencies for "type-example" feature:
+scale-value = { workspace = true, optional = true }
+proc-macro2 = { workspace = true, optional = true }
+rand_chacha = { workspace = true, optional = true }
+rand = { workspace = true, optional = true }
 
 [dev-dependencies]
 indoc = "2"
