fix bugs in generic recursion of container types

--- a/description/Cargo.toml
+++ b/description/Cargo.toml
@@ -29,3 +29,4 @@ rand = { workspace = true, optional = true }
 [dev-dependencies]
 indoc = "2"
 pretty_assertions = { workspace = true }
+parity-scale-codec = { workspace = true }
