--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -11,7 +11,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v3
 
       - name: setup
         uses: actions-rs/toolchain@v1
@@ -31,6 +32,9 @@ jobs:
         run: |
           cargo clippy --version
           cargo clippy --all-targets -- -D warnings
+
+      - name: machete
+        uses: bnjbvr/cargo-machete@main
 
       - name: check
         run: |
