--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,19 +22,19 @@ scale-typegen = { version = "0.1.1", path = "typegen" }
 parity-scale-codec = { version = "3.6.5", features = ["derive"] }
 proc-macro2 = "1.0.69"
 quote = "1.0.33"
-scale-bits = "0.4.0"
+scale-bits = "0.5.0"
 scale-info = { version = "2.10.0", features = ["derive", "bitvec", "decode", "docs", "serde"] }
 smallvec = "1.10.0"
 syn = { version = "2.0.38", features = ["full", "extra-traits"] }
 thiserror = "1.0.50"
 prettyplease = "0.2.15"
-scale-decode = "0.9.0"
-scale-encode = "0.5.0"
+scale-decode = "0.11.1"
+scale-encode = "0.6.0"
 frame-metadata = { version = "16.0.0", default-features = false, features = ["current", "std"] }
 bitvec = { version = "1", default-features = false, features = ["alloc"] }
 pretty_assertions = "1.4.0"
 anyhow = "1.0.75"
 peekmore = "1.3.0"
-scale-value = { version = "0.13.0" }
-rand_chacha = { version = "0.3.1" }
-rand = { version = "0.8.5" }
+scale-value = "0.14.0"
+rand_chacha = "0.3.1"
+rand = "0.8.5"
