--- a/typegen/Cargo.toml
+++ b/typegen/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "scale-typegen"
-version = "0.1.1"
+version = { workspace = true }
 edition = "2021"
 authors = ["Parity Technologies <admin@parity.io>"]
 license = "Apache-2.0"
