--- a/description/Cargo.toml
+++ b/description/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "scale-typegen-description"
-version = "0.1.0"
+version = { workspace = true }
 edition = "2021"
 license = "Apache-2.0"
 readme = "README.md"
