fix tricky situation with multiple params that share a type id

--- a/typegen/Cargo.toml
+++ b/typegen/Cargo.toml
@@ -14,6 +14,7 @@ quote = { workspace = true }
 scale-info = { workspace = true }
 syn = { workspace = true }
 thiserror = { workspace = true }
+smallvec = { workspace = true }
 
 [dev-dependencies]
 scale-bits = { workspace = true }
