--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ resolver = "2"
 authors = ["Parity Technologies <admin@parity.io>"]
 edition = "2021"
 version = "0.9.0"
-rust-version = "1.70.0"
+rust-version = "1.81.0"
 license = "Apache-2.0 OR GPL-3.0"
 repository = "https://github.com/paritytech/scale-typegen"
 homepage = "https://www.parity.io/"
@@ -24,7 +24,7 @@ scale-bits = "0.6.0"
 scale-info = { version = "2.11.1", features = ["derive", "bit-vec", "decode", "docs", "serde"] }
 smallvec = "1.10.0"
 syn = { version = "2.0.38", features = ["full", "extra-traits"] }
-thiserror = "1.0.50"
+thiserror = { version = "2.0.0", default-features = false }
 prettyplease = "0.2.25"
 scale-decode = "0.14.0"
 scale-encode = "0.8.0"
